# nsw-pharmacy-scraper

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt  snapshot.json
.github/workflows/: weekly-scrape.yml
src/: api.py  diff.py  main.py  models.py  postcodes.py  scraper.py  sheets.py  tabs.py
tests/: test_api.py  test_diff.py  test_models.py
